ANOTHER ROUTING FIX

--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,7 @@
 {
   "hosting": {
     "public": "build",
+    "rewrites":[{"source":"**","destination":"/index.html"}],
     "ignore": [
       "firebase.json",
       "**/.*",
